# Flask-Cassandra

./: README.md  pyproject.toml
flask_cassandra/: __init__.py
tests/: test_flask_cassandra.py
