[tool.poetry]
name = "Flask-Cassandra"
version = "0.1.7"
description = ""
authors = ["Kostiantyn Hantsov <hantsov@iconik.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2"
cassandra-driver = "^3"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
